--- a/estilos.css
+++ b/estilos.css
@@ -1,1 +1,29 @@
+html, body {
+  height: 100%;
+  width: 100%;
+  font-family: arial;
+  color: indigo;
+}
 
+h1 {
+  font-size: 45px;
+}
+
+input[type=text], fieldset {
+  border: 2px solid darkslateblue;
+  border-radius: 4px;
+}
+
+input[type=text]:focus {
+  background-color: plum;
+}
+
+input[type=submit] {
+  background-color: plum;
+  border: none;
+  color: indigo;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+}
